ENABLE_SHADOW_DOM should be available via build-webkit --shadow-dom https://bugs.webkit.org/show_bug.cgi?id=76863

.:

Patch by Hajime Morita <morrita@google.com>> on 2012-01-25
Reviewed by Dimitri Glazkov.

Added a feature flag.

* Source/cmake/OptionsBlackBerry.cmake:
* Source/cmake/OptionsEfl.cmake:
* Source/cmake/OptionsWinCE.cmake:
* configure.ac:

Source/JavaScriptCore:

Patch by Hajime Morita <morrita@google.com> on 2012-01-25
Reviewed by Dimitri Glazkov.

Added a feature flag.

* Configurations/FeatureDefines.xcconfig:

Source/WebCore:

Patch by Hajime Morita <morrita@google.com> on 2012-01-25
Reviewed by Dimitri Glazkov.

Added a feature flag.

No tests, it's a behid flag configuration change.

* CMakeLists.txt:
* Configurations/FeatureDefines.xcconfig:
* DerivedSources.cpp:
* DerivedSources.make:
* DerivedSources.pri:
* GNUmakefile.am:
* GNUmakefile.list.am:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:

Source/WebKit/mac:

Patch by Hajime Morita <morrita@google.com> on 2012-01-25
Reviewed by Dimitri Glazkov.

Added a feature flag.

* Configurations/FeatureDefines.xcconfig:

Source/WebKit2:

Patch by Hajime Morita <morrita@google.com> on 2012-01-25
Reviewed by Dimitri Glazkov.

Added a feature flag.

* Configurations/FeatureDefines.xcconfig:

Tools:

Patch by Hajime Morita <morrita@google.com> on 2012-01-25
Reviewed by Dimitri Glazkov.

Added a feature flag.

* Scripts/build-webkit:
* qmake/mkspecs/features/features.prf:

WebKitLibraries:

Patch by Hajime Morita <morrita@google.com>> on 2012-01-25
Reviewed by Dimitri Glazkov.

Added a feature flag.

* win/tools/vsprops/FeatureDefines.vsprops:
* win/tools/vsprops/FeatureDefinesCairo.vsprops:

Canonical link: https://commits.webkit.org/93920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105922 268f45cc-cd09-0410-ab3c-d52691b4dbfc